<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/nav_profile">

    <!-- Фрагменты для каждого пункта меню -->
    <fragment
        android:id="@+id/nav_publications"
        android:name="com.example.gunmedia.publications.PublicationsFragment"
        android:label="@string/publications"
        tools:layout="@layout/fragment_publications" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.gunmedia.events.EventsFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_shops"
        android:name="com.example.gunmedia.shops.ShopsFragment"
        android:label="@string/shops"
        tools:layout="@layout/fragment_shops" />

    <fragment
        android:id="@+id/nav_archive"
        android:name="com.example.gunmedia.archive.ArchiveFragment"
        android:label="@string/archive"
        tools:layout="@layout/fragment_archive" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.gunmedia.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>